--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<script>						
-		window.CONFIG_URL="https://raw.githubusercontent.com/thorstenbaek/sandbox-environments/dev-tst/"
+		window.CONFIG_URL="${CONFIG_URL}"
 	</script>
 </body>
 </html>
