Display patient address

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
 
 <body>
 	<script>						
-		window.CONFIG_URL="${CONFIG_URL}"
+		// window.CONFIG_URL="${CONFIG_URL}"
+		window.CONFIG_URL="https://raw.githubusercontent.com/thorstenbaek/sandbox-environments/synthea/"
 	</script>
 </body>
 </html>
